# roscamp-repo-1

./: README.md  package.xml  setup.cfg  setup.py
launch/: aruco_launch.py  aruco_multi_launch.py  camera_launch.py  rviz_launch.py
libro_arduino/: setup.py
libro_arduino/libro_arduino/: basket_check_publisher.py
libro_arduino/resource/: basket_checker  libro_arduino
libro_arduino/src/libro_arduino/: package.xml  setup.cfg  setup.py
libro_aruco/: aruco_initialpose_publisher.py  aruco_odom_tf_broadcaster.py  aruco_pose_publisher.py  aruco_processor.py  aruco_tf_broadcaster.py  camera_publisher.py  low_pass_filter.py
libro_control/libro_control/: libro_robot_controller_node.py  libro_robot_log.json  libro_service_request_log.json  libro_service_request_navigate.json  libro_service_request_test.json  libro_task_manager_node.py
libro_control_msgs/: CMakeLists.txt  package.xml
libro_control_msgs/msg/: BookPickUp.msg  LibroRobotState.msg  Navigate.msg  PinkyResponse.msg
libro_mobile/src/libro_mobile/: setup.py  (+1 more)
map/: map.yaml
params/: camera_param.yaml  transform_param.yaml
rviz/: aruco_view.rviz
src/libro_arduino/: setup.py
src/libro_control/: package.xml  setup.cfg  setup.py
src/libro_control_msgs/: CMakeLists.txt  package.xml
src/libro_control_msgs/msg/: BookPickUp.msg  BookPickUpMission.msg  JetcobotPickRequest.msg  JetcobotPickResponse.msg  JetcobotPlaceRequest.msg  LibroRobotLog.msg  LibroRobotState.msg  Navigate.msg  NavigateMission.msg  PinkyMissionPlace.msg  PinkyMissionResponse.msg  PinkyRequest.msg
src/libro_mobile/: package.xml  setup.cfg  setup.py
src/libro_picker_controller/: package.xml  setup.py
src/libro_picker_srvs/: CMakeLists.txt  package.xml
src/libro_picker_srvs/msg/: AngleCommand.msg  GripperCommand.msg  MotorCommand.msg  PickBookCommand.msg  PosCommand.msg
src/libro_picker_srvs/srv/: AngleControl.srv  MotorControl.srv  PosControl.srv
src/libro_picker_teleop/: package.xml  setup.cfg  setup.py
(+37 files in other folders)
